--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,12 @@ plugins {
     id 'maven-publish'
     id 'org.jetbrains.kotlin.jvm' version '1.7.22'
     id 'org.jetbrains.kotlin.plugin.spring' version '1.7.22'
+    id "org.jetbrains.kotlin.kapt" version "1.7.22"
     id "org.jmailen.kotlinter" version "3.13.0"
 }
 
 group = 'herbaccara'
-version = '0.0.2'
+version = '0.0.3'
 sourceCompatibility = '17'
 
 publishing {
@@ -48,6 +49,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot:3.0.0'
     implementation 'org.springframework.boot:spring-boot-autoconfigure:3.0.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.0'
+    kapt "org.springframework.boot:spring-boot-configuration-processor:2.7.0"
 
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.13.3'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.3'
