--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,13 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+        extendsFrom kapt
+    }
+}
+
 dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
@@ -49,7 +56,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot:3.0.0'
     implementation 'org.springframework.boot:spring-boot-autoconfigure:3.0.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.0'
-    kapt "org.springframework.boot:spring-boot-configuration-processor:2.7.0"
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor:3.0.0"
+    kapt "org.springframework.boot:spring-boot-configuration-processor:3.0.0"
 
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.13.3'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.3'
